Added additional code to support a minimum steering difference optimisation that prevents continuous steering joints from moving more than a quatre turn. Modified the test yaml and added a description of the new param. Added new param enable_min_steering_difference to enable or disable this new functionality, default off.

--- a/swerve_controller/test/config/swervebot_control.yaml
+++ b/swerve_controller/test/config/swervebot_control.yaml
@@ -19,8 +19,11 @@ swervebot:
         rh_steering: "leg_rh_joint"
 
         # Range of motion of steering motors
-        min_steering_angle: -1.58
-        max_steering_angle: 1.58
+        # min_steering_angle: -1.58
+        # max_steering_angle: 1.58
+
+        # Minimise steering difference between previous and next steering angle (continuous steering joints only)
+        # enable_min_steering_difference: true
 
         # Other
         publish_rate: 50
